# SQLQueryChain

./: .env.example  README.md  pyproject.toml  questions.txt  sql_queries.txt  sql_results.json
.github/workflows/: code-quality.yml
src/sql_chain/: config.py  graph.py  tools.py
src/sql_chain/agents/: query_evaluator.py  query_executor.py  question_generator.py  sql_formulator.py
src/sql_chain/models/: model.py
src/sql_chain/scripts/: test_db.py
src/sql_chain/sql/: bank-database-script.sql  initialise.py  sql.py
src/sql_chain/utils/: log_setup.py
tests/: test_query_executor.py
